works on the categories

--- a/app/assets/stylesheets/questions/form.scss
+++ b/app/assets/stylesheets/questions/form.scss
@@ -113,3 +113,8 @@
 .question-form-double-sidebar-content li {
   margin: 10px 0;
 }
+
+.que-category{
+  margin-bottom: 18px;
+  margin-left: -13px;
+}
