Complete email/password login, FB login, Google login. TODO: set email credential for production environment.

--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -1,1 +1,7 @@
 <div id='root'></div>
+
+<% if flash[:error] || flash[:notice] %>
+	<script type="text/javascript">
+		alert("<%= flash[:error] || flash[:notice] %>")
+	</script>
+<% end %>
