Set success sign up message

--- a/app/views/user_mailer/reset_password_instructions.html.erb
+++ b/app/views/user_mailer/reset_password_instructions.html.erb
@@ -26,7 +26,7 @@
                             <p style="color:#000000; font-size:14px; margin:20px 0px 10px; width:100%; display:block;  text-align:center;">
                                 Click on below link to recover you account. <br />
                                 <%= link_to @url, target: "_blank" do %>
-                                    Confirm your account
+                                    Reset your password
                                 <% end %>
                             </p>
                         </td>
