--- a/app/assets/stylesheets/sort_nav.scss
+++ b/app/assets/stylesheets/sort_nav.scss
@@ -29,7 +29,7 @@
   border-left: 1px solid #ddd;
   border-right: 1px solid #ddd;
   border-bottom: 2px solid white;
-  border-top: 2px solid orange;
+  border-top: 2px solid #688EA2;
   padding: 7px 10px 9px 10px;
 }
 
