--- a/app/views/user_mailer/reset_password_instructions.html.erb
+++ b/app/views/user_mailer/reset_password_instructions.html.erb
@@ -15,7 +15,7 @@
                 <table valign="top" align="center" cellpadding="0" cellspacing="0" width="600" bgcolor="#ffffff" style="font-family:Arial, Helvetica, sans-serif;font-size:14px;line-height:16px;color:#000000; border:1px solid #ddd;">
                     <tr>
                         <td bgcolor="#22313F" align="left" width="100%" height="50px" style="border-bottom:2px solid #009A19;">
-                            <h2 style="color:#ffffff; font-size:22px; padding:15px; margin:0px;">SnackOverflow</h2>
+                            <h2 style="color:#ffffff; font-size:22px; padding:15px; margin:0px;">RestartReality</h2>
                         </td>
                     </tr>
                     <tr>
