Fixed : Move image url in css for social login button image

--- a/app/assets/stylesheets/nav/auth_modal.scss
+++ b/app/assets/stylesheets/nav/auth_modal.scss
@@ -81,8 +81,10 @@
 .social-image {
   &.fb {
     width: 60%;
+    content: url(image_path('fb.jpg'))
   }
   &.google-plus {
     width: 60%;
+    content: url(image_path('google_plus.jpg'));
   }
 }
