Add footer and create static page link, create contact us page

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -10,3 +10,8 @@ html {
   background: url(image_path('restaurant_icons.png'));
   background-repeat: repeat;
 }
+
+.static-page-title {
+	font-size: 30px;
+  font-weight: 500;
+}
