changed background color

--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  background: url(image_path('restaurant_icons.png'));
+  background: url(image_path('white.jpg'));
   background-repeat: repeat;
 }
 
